# wx

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: app.rs  cli.rs  main.rs  noaa.rs  units.rs  weather.rs
