[package]
name = "wx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"
chrono = {version="0.4.22", features=["serde"]}
serde_json = "1.0.85"
serde = {version="1.0.144", features = ["derive"]}
reqwest = {version="0.11.11", features=["json", "blocking"]}
